--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		 <button onclick="setMinutes(1)">1</button>
 	     <button onclick="setMinutes(10)">10</button>
 	     <button onclick="setMinutes(25)">25</button>
-		 <button onclick="startTime(minutes*60)">Click me</button>
+		 <button onclick="startTime(minutes*60)">Start</button>
 		 <button onclick="stop()">pause</button>
 		 <button onclick="setMinutes(0)">Reset</button>
 
